# singlepowder

./: .gitignore  CMakeLists.txt  README.txt
doc/: doc.aux  doc.tex  doc.toc
src/: .CMakeLists.txt.swp  .DetectorImage.cpp.swp  .DetectorImage.h.swp  .Diffractogram.cpp.swp  .Diffractogram.h.swp  .Geometry.cpp.swp  .Geometry.h.swp  .Integrator.cpp.swp  .List.cpp.swp  .List.h.swp  .Mask.cpp.swp  .Mask.h.swp  .MaskMaker.cpp.swp  .Parameters.cpp.swp  .Parameters.h.swp  .Vector.cpp.swp  .Vector.h.swp  .singlepowder.cpp.swp  .utils.h.swp  Action.cpp  Action.h  CMakeLists.txt  DetectorImage.cpp  DetectorImage.h  Diffractogram.cpp  Diffractogram.h  Geometry.cpp  Geometry.h  Integrator.cpp  Integrator.h  List.cpp  List.h  Makefile  Mask.cpp  Mask.h  MaskMaker.cpp  MaskMaker.h  Parameters.cpp  Parameters.h  Vector.cpp  (+8 more)
test/: .CMakeLists.txt.swp  .test.cpp.swp  AR506a_apex001_01_0001.out  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
test/testdata/: .images.txt.swp  .parameters.txt.swp  TD015S001apex004_01_0001.out  TD015S001apex004_02_0001.out  equal_mask.txt  images.txt  made_mask.txt  mask.txt  multiplied_mask.txt  output.txt  outputmask.txt  parameters.txt  smaller_mask1.txt  smaller_mask2.txt  wrong_mask.txt
